Use modern Java features